--- a/.env.local.example
+++ b/.env.local.example
@@ -1,8 +1,8 @@
-
-# Firebase App configuration
-# Copy these lines to a .env.local file in the root of your project
-# and replace the placeholder values with your actual Firebase project credentials.
-# You can find these values in your Firebase project settings under "General" -> "Your apps" -> select your web app.
+# Firebase Web App Configuration
+# Copy this file to .env.local and replace the placeholder values
+# with your actual Firebase project configuration.
+# You can find these values in your Firebase project settings:
+# Project settings > General > Your apps > Web app > Firebase SDK snippet > Config
 
 NEXT_PUBLIC_FIREBASE_API_KEY=YOUR_API_KEY
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=YOUR_AUTH_DOMAIN
