--- a/.env.local.example
+++ b/.env.local.example
@@ -1,13 +1,14 @@
-# Firebase Web App Configuration
-# Copy this file to .env.local and replace the placeholder values
-# with your actual Firebase project configuration.
-# You can find these values in your Firebase project settings:
-# Project settings > General > Your apps > Web app > Firebase SDK snippet > Config
+# Firebase App configuration
+# IMPORTANT: Rename this file to .env.local and fill in your Firebase project's specific values.
+# You can find these values in your Firebase project settings under "General" -> "Your apps" -> Select your web app -> "SDK setup and configuration".
 
+# Required
 NEXT_PUBLIC_FIREBASE_API_KEY=YOUR_API_KEY
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=YOUR_AUTH_DOMAIN
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=YOUR_PROJECT_ID.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=YOUR_PROJECT_ID
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=YOUR_STORAGE_BUCKET
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=YOUR_PROJECT_ID.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=YOUR_MESSAGING_SENDER_ID
 NEXT_PUBLIC_FIREBASE_APP_ID=YOUR_APP_ID
+
+# Optional - for Firebase Analytics
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=YOUR_MEASUREMENT_ID
