--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
+    "next-pwa": "^5.6.0",
     "patch-package": "^8.0.0",
     "pdfmake": "^0.2.20",
     "react": "^18.3.1",
