--- a/package.json
+++ b/package.json
@@ -44,13 +44,11 @@
     "file-saver": "^2.0.5",
     "firebase": "^11.7.0",
     "genkit": "^1.8.0",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.2",
+    "html2pdf.js": "^0.10.1",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "next-pwa": "^5.6.0",
     "patch-package": "^8.0.0",
-    "pdfmake": "^0.2.20",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
