--- a/package.json
+++ b/package.json
@@ -62,10 +62,11 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
+    "@types/pdfmake": "^0.2.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/pdfmake": "^0.2.9",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
